<resources>
    <string name="app_name">AreaMobile</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="NoAccount">No account yet? Create one</string>
    <string name="CreateAccount">Create Account</string>
    <string name="url">Url</string>
    <string name="email">Email</string>
    <string name="accounts">Accounts</string>
    <string name="manage_account">Manage all your accounts</string>
    <string name="facebook">Facebook</string>
    <string name="connect_facebook">Connect to your facebook account</string>
    <string name="stay_connected">Stay connected</string>
    <string name="log_out">Log out</string>

    <string name="instagram">Instagram</string>
    <string name="connect_insta">Connect to your instagram account</string>

    <string name="services">Services</string>
    <string name="services_desc">Check out all services available</string>
    <string name="service_facebook_desc">See all modules available for Facebook</string>
    <string name="insta">Instagram</string>
    <string name="service_insta_desc">See all modules available for Instagram</string>
    <string name="timer">Timer</string>
    <string name="service_timer_desc">See all modules available for the Timer</string>
    <string name="timer_title">Timer service</string>
    <string name="date">Date :&#160;</string>
    <string name="time">Time :&#160;</string>
    <string name="get_time">get time</string>
    <string name="in">In&#160;</string>
    <string name="days_verbose">&#160;days it\'ll be the&#160;</string>
    <string name="get_day">get day</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="change_account">Change your settings account</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="update_profile">Update profile</string>
    <string name="date_placeholder">--- -- ---</string>
    <string name="time_placeholder">--:--</string>
    <string name="nbdays_placeholder">-</string>
    <string name="area">ARea</string>
    <string name="set_up_action_reaction">Set up action/reaction</string>
    <string name="action">Action</string>
    <string name="reaction">Reaction</string>
    <string name="submit">Submit</string>
    <string name="delete_account">Delete account</string>
    <string name="weather">Weather</string>
    <string name="weather_module">See all module available for the Weather</string>
    <string name="films">Films</string>
    <string name="films_modules">See all modules available for the Films</string>

    <string-array name="action_arrays">
        <item>Films</item>
        <item>Weather</item>
    </string-array>

    <string-array name="reaction_arrays">
        <item>Send mail</item>
    </string-array>

</resources>
