<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity"
        android:orientation="vertical"
        android:background="@drawable/image_visibility">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_title"
            android:layout_gravity="center"
            android:textSize="44sp"
            android:textStyle="bold"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginStart="25dp">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/date_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_placeholder"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/time_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_placeholder"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/in"/>

            <TextView
                    android:id="@+id/nb_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/nbdays_placeholder"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/days_verbose"/>

            <TextView
                    android:id="@+id/date_calc_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/date_placeholder"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp">

        <Button
                android:id="@+id/get_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_day"
                android:layout_gravity="center"/>

        <Button
                android:id="@+id/get_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_time"
                android:layout_gravity="center"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/nb_days_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

            <Button
                    android:id="@+id/calc_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Calc. date"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>