<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fitsSystemWindows="true">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

        <ImageView android:src="@drawable/logo"
                   android:layout_width="wrap_content"
                   android:layout_height="72dp"
                   android:layout_marginBottom="24dp"
                   android:layout_gravity="center_horizontal" />

        <!-- email Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_email"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textEmailAddress"
                      android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPassword"
                      android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>

        <!-- api url Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_url"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="text"
                      android:hint="@string/url"/>
        </android.support.design.widget.TextInputLayout>

        <CheckBox
                android:id="@+id/stay_connected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/stay_connected"/>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:background="@drawable/buttons_background"
                android:padding="12dp"
                android:text="@string/login"/>

        <TextView android:id="@+id/link_signup"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="24dp"
                  android:text="@string/NoAccount"
                  android:gravity="center"
                  android:textSize="16dip"/>

    </LinearLayout>
</ScrollView>