<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@drawable/image_visibility"
        tools:context=".HomeActivity"
        android:paddingHorizontal="50dp"
        android:gravity="center">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:text="@string/action"/>

    <Spinner
            android:id="@+id/action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:entries="@array/action_arrays"
            android:prompt="@string/action" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:text="@string/reaction"/>

    <Spinner
            android:id="@+id/reaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:entries="@array/reaction_arrays"
            android:prompt="@string/reaction"
    />

    <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:textColor="@color/white"
            android:background="@drawable/buttons_background"
            android:padding="12dp"
            android:text="@string/submit"/>

</LinearLayout>