<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fitsSystemWindows="true"
            android:background="@drawable/image_visibility"
>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

        <ImageView android:src="@drawable/logo"
                   android:layout_width="wrap_content"
                   android:layout_height="72dp"
                   android:layout_marginBottom="24dp"
                   android:layout_gravity="center_horizontal" />

        <!-- email Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <EditText android:id="@+id/current_password"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPassword"
                      android:textColorHint="@color/white"
                      android:hint="@string/current_password" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <EditText android:id="@+id/new_password"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColorHint="@color/white"
                      android:inputType="textPassword"
                      android:hint="@string/new_password"/>
        </android.support.design.widget.TextInputLayout>

        <!-- api url Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <EditText android:id="@+id/new_password2"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColorHint="@color/white"
                      android:inputType="textPassword"
                      android:hint="@string/confirm_new_password"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_update"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:background="@drawable/buttons_background"
                android:padding="12dp"
                android:textColor="@color/white"
                android:text="@string/update_profile"/>

    </LinearLayout>
</ScrollView>