<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity"
        android:orientation="vertical"
        android:background="#FAFAFA">

    <android.support.v7.widget.CardView
            android:id="@+id/connect_facebook"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_facebook"
                    android:padding="5dp"
                    android:layout_gravity="center"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/facebook"
                    android:textStyle="bold"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/connect_facebook"
                    android:textColor="@android:color/darker_gray"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/connect_insta"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_insta"
                    android:padding="5dp"
                    android:layout_gravity="center"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/instagram"
                    android:textStyle="bold"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/connect_insta"
                    android:textColor="@android:color/darker_gray"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>
    <WebView
            android:id="@+id/webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

</LinearLayout>